--- a/src/components/Github.css
+++ b/src/components/Github.css
@@ -11,10 +11,12 @@
     margin-left: 19%;
     margin-top: 5%;
 }
-/* @media screen and (min-width: 300px) {
+@media screen and (min-width: 300px) {
  
   }
   
-  @media screen and (min-width: 750px) {
-  
-} */
+  @media screen and (min-width: 980px) {
+    .first, .second{
+      margin: '0%';
+    }
+}
