--- a/src/components/Github.css
+++ b/src/components/Github.css
@@ -1,22 +1,26 @@
 .rdx{
-   margin: auto;
+   /* margin: auto; */
+   display: grid;
+   place-items: center ;
    background-color: blueviolet;
+   padding: 0px 10px 10px 10px;
    
 }
 .first{
-    margin-left: 30%;
+    /* margin-left: 30%; */
     padding-top: 5%;
 }
 .second{
-    margin-left: 19%;
+    /* margin-left: 19%; */
     margin-top: 5%;
 }
-@media screen and (min-width: 300px) {
+/* @media screen and (min-width: 300px) {
  
   }
   
   @media screen and (min-width: 980px) {
     .first, .second{
-      margin: '0%';
+      margin: '0%' ;
+    
     }
-}
+} */
